[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Slime_Enemy/slime-move-0.png" type="Texture" id=1]
[ext_resource path="res://Assets/Slime_Enemy/slime-idle-3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Slime_Enemy/slime-move-2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Slime_Enemy/slime-idle-0.png" type="Texture" id=4]
[ext_resource path="res://Assets/Slime_Enemy/slime-idle-1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Slime_Enemy/slime-idle-2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Slime_Enemy/slime-move-1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Slime_Enemy/slime-move-3.png" type="Texture" id=8]
[ext_resource path="res://Scripts/SlimeEnemy.gd" type="Script" id=9]
[ext_resource path="res://Assets/Slime_Enemy/slime-die-1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Slime_Enemy/slime-die-0.png" type="Texture" id=11]
[ext_resource path="res://Assets/Slime_Enemy/slime-die-3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Slime_Enemy/slime-die-2.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "moving",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 16.8105

[sub_resource type="CircleShape2D" id=24]
radius = 24.6297

[sub_resource type="CircleShape2D" id=25]
radius = 17.7244

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 5.5 )
scale = Vector2( 1.26278, 1.23545 )
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="HurtboxShape" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 24 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 25 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
